--- a/index.html
+++ b/index.html
@@ -95,53 +95,49 @@
 				<p><a href="/got/grid.html" target="gotgrid">The grid</a> was built using D3.js to load in the data and populate the grid with content.</p>
 			</li>
 		</ul>
-<!-- 		<ul class="collection" id="posts">
+		<ul class="collection" id="posts">
 			<h2>Posts</h2>
-			<span class="summary"><span><p>Some posts, mainly on front-end coding.</p></span></span>
+			<span class="summary"><span><p>Front-end coding posts on Medium or CodePen.</p></span></span>
 			<li>
-				<a href="https://medium.com/@andybarefoot/stretching-the-grid-5-fun-ways-to-use-css-grid-5931166f467f" target="stretch"><h3>Stretching the Grid — 6 fun ways to use CSS Grid</h3></a>
-				<a href="https://medium.com/@andybarefoot/stretching-the-grid-5-fun-ways-to-use-css-grid-5931166f467f" target="stretch"><img src="images/thumbs/thronesMap-300.jpg" /></a>
-				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
-				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
-				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+				<a href="https://medium.com/@andybarefoot/stretching-the-grid-5-fun-ways-to-use-css-grid-5931166f467f" target="stretch"><h3>Stretching the Grid - 6 fun ways to use CSS Grid</h3></a>
+				<a href="https://medium.com/@andybarefoot/stretching-the-grid-5-fun-ways-to-use-css-grid-5931166f467f" target="stretch"><img src="images/thumbs/article06-300.png" /></a>
+				<p>Having spent a few months experimenting with CSS Grid layout I had a <a href="https://codepen.io/collection/DapBxW/" target="_blank">collection of CodePens</a> that I thought were interesting and demonstrated techniques I hadn't seen elsewhere.</p>
+				<p>With this in mind I wrote a Medium post listing some of these new techniques and layouts and included links to the CodePen examples.</p>
 			</li>
 			<li>
 				<a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="masonrypost"><h3>Masonry style layout with CSS Grid</h3></a>
-				<a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="masonrypost"><img src="images/thumbs/thronesMap-300.jpg" /></a>
-				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
-				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
-				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+				<a href="https://medium.com/@andybarefoot/a-masonry-style-layout-using-css-grid-8c663d355ebb" target="masonrypost"><img src="images/thumbs/article05-300.png" /></a>
+				<p>A commonly asked question about CSS Grid is whether it can support a Masonry-style layout. The short answer is that it can't. However it has a lot of features that make creating a Masonry-style layout easier if you use a small amount of JavaScript and are willing to accept some minor limitations.</p>
+				<p>I wrote a post on Medium explaining this approach and providing examples of various iterations of the final solution.</p>
 			</li>
 			<li>
 				<a href="https://codepen.io/andybarefoot/post/isometric-layout-with-css-grid" target="stretch"><h3>Isometric layout with CSS Grid</h3></a>
-				<a href="https://codepen.io/andybarefoot/post/isometric-layout-with-css-grid" target="stretch"><img src="images/thumbs/thronesMap-300.jpg" /></a>
-				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
-				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
-				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+				<a href="https://codepen.io/andybarefoot/post/isometric-layout-with-css-grid" target="stretch"><img src="images/thumbs/article04-300.png" /></a>
+				<p>I had created an <a href="https://codepen.io/andybarefoot/pen/MERBPx" target="_blank">example</a> on CodePen of how to lay out content in an Isometric display using CSS Grid.</p>
+				<p>Responding to a tweet by <a href="https://twitter.com/rachsmithtweets"  target="_blank">Rachel Smith</a> I wrote a CodePen post describing how I had created the isometric grid layout and how to place content within it.</p>
 			</li>
 			<li>
 				<a href="https://medium.com/@andybarefoot/d3-and-css-grid-with-expanding-content-3c8aaf783cb1" target="expandingpost"><h3>D3 and CSS Grid with expanding content</h3></a>
-				<a href="https://medium.com/@andybarefoot/d3-and-css-grid-with-expanding-content-3c8aaf783cb1" target="expandingpost"><img src="images/thumbs/thronesMap-300.jpg" /></a>
-				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
-				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
-				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+				<a href="https://medium.com/@andybarefoot/d3-and-css-grid-with-expanding-content-3c8aaf783cb1" target="expandingpost"><img src="images/thumbs/article03-300.png" /></a>
+				<p>Having started using CSS Grid I was interested in exploring its ability to lay out different size content blocks into a densely packed grid. For this I used all the characters from Game of Thrones that I had gathered for a data vis project.</p>
+				<p>I then wanted to extend the functionality so that clicking on one of the grid elements would expand it to reveal more content without the element moving position within the grid. This article explains how this was achieved using the CSS Grid layout and JavaScript.</p>
 			</li>
 			<li>
 				<a href="https://medium.com/@andybarefoot/making-a-map-using-d3-js-8aa3637304ee" target="mappost"><h3>Making a map using D3.js</h3></a>
-				<a href="https://medium.com/@andybarefoot/making-a-map-using-d3-js-8aa3637304ee" target="mappost"><img src="images/thumbs/thronesMap-300.jpg" /></a>
-				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
-				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
-				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+				<a href="https://medium.com/@andybarefoot/making-a-map-using-d3-js-8aa3637304ee" target="mappost"><img src="images/thumbs/article02-300.png" /></a>
+				<p><a href="https://twitter.com/mbostock" target="_blank">Mike Bostock</a>'s D3.js library makes use of SVG, HTML5 and CSS standards to create interactive data visualisations for the web. He has hundreds of examples of amazing visualisations created using this library.</p>
+				<p>I had been using the library to make some data visualisations of my own and as part of this I wanted to create a simple and reusable world map template. The idea was that I would be able to use this standard map as a base for future visualisations so it should be possible to customise it very easily.</p>
+				<p>This article describes the approach I used and all the information necessary for someone to customise it. The article links to the completed map on CodePen.</p>
 			</li>
 			<li>
 				<a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746" target="instagrampost"><h3>Adding Instagram photos to my site with AngularJS</h3></a>
-				<a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746" target="instagrampost"><img src="images/thumbs/thronesMap-300.jpg" /></a>
-				<p>To play the Game of Thrones you will need allies. But when those allies are Petyr Baelish, Roose Bolton or Alliser Thorne you will also need stab proof armour.</p>
-				<p>This <a href="/got/allegiances.html" target="gotmap">map</a> shows all the major houses and institutions of the Game of Thrones world with the many, many allegiances and connections to the hundreds of characters in the show.</p>
-				<p><a href="/got/allegiances.html" target="gotmap">The visualisation</a> was built using D3.js using data from the excellent <a class="ext" href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a>.</p>
+				<a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746" target="instagrampost"><img src="images/thumbs/article01-300.png" /></a>
+				<p>An old article describing how I added my latest Instagram photos to my personal site using my own look and feel despite Instagram not really supporting this.</p>
+				<p>Article describes scraping Instagram for my most recent content, saving the images locally and then implementing a Masonry layout using AngularJS</p>
+				<p>The implementation it describes is no longer live, but the approach should still work.</p>
 			</li>
 		</ul>
- -->		<ul class="collection" id="datavis">
+		<ul class="collection" id="datavis">
 			<h2>Data Vis</h2>
 			<span class="summary"><span><p>Data Vis experiments mainly using D3.js.</p></span></span>
 			<li>
@@ -155,7 +151,7 @@
 				<a href="/art/" target="metcollection"><h3>The Met Collection</h3></a>
 				<a href="/art/" target="metcollection"><img src="images/thumbs/met-300.jpg" /></a>
 				<p><a class="ext" href="http://www.metmuseum.org/" target="met">The Metropolitan Museum of Art</a> recently published to GitHub the <a class="ext" href="https://github.com/metmuseum/openaccess" target="metgithub">details of 446,029 objects</a> from their collection.</p>
-				<p>This data visualisation attemts to show the distribution of the entire collection by date and to show the difference in age depending on the type of artifact. For example, the majority of vases in the collection are from around the year 300 A.D or before.</p>
+				<p>This data visualisation attempts to show the distribution of the entire collection by date and to show the difference in age depending on the type of artefact. For example, the majority of vases in the collection are from around the year 300 A.D or before.</p>
 				<p><a href="/art/" target="metcollection">The visualisation</a> was made using D3.js after the raw data had been consolidated into JSON using PHP.</p>
 			</li>
 			<li><a href="/football/world-champions.html" target="footballmap"><h3>UFWC Map</h3></a>
@@ -174,7 +170,7 @@
 				<a href="/football/" target="football"><h3>UFWC</h3></a>
 				<a href="/football/" target="football"><img src="images/thumbs/uwc-300.jpg" /></a>
 				<p>The <a class="ext" href="http://www.ufwc.co.uk/" target="ufwc">Unofficial Football World Championships</a> is a project by Paul Brown that tracks the World Champions of football as if the title were decided in the same way as boxing, i.e a team remains champions until they lose a game.</p>
-				<p>My <a href="/football/" target="football">data visualisation</a> shows all of the 918 "title decider" games that have been played so far showing how thetitle has jumped from nation to nation and continent to continent.</p>
+				<p>My <a href="/football/" target="football">data visualisation</a> shows all of the 918 "title decider" games that have been played so far showing how the title has jumped from nation to nation and continent to continent.</p>
 				<p>The visualisation was built using D3.js and JQuery and all the data was sourced from the <a class="ext" href="http://www.ufwc.co.uk/results/" target="ufwc">UFWC website</a>.</p>
 			</li>
 			<li>
