--- a/football/index.html
+++ b/football/index.html
@@ -28,7 +28,7 @@
         <p>This magnificent folly is documented at the <a href="http://www.ufwc.co.uk/">Unofficial Football World Championships</a> and what you can find here is merely an exercise in data visualisation based on their results.</p>
         <p>Start the visualisation to see each of the <span id="matchTotal"></span> matches so far. The reigning champion is shown in gold. Each challenge is shown as a link to the challenging country. If the challenge was successful the link and the new champion is shown in gold. Next to each country is displayed the number of times it has won the title.</p>
         <div id="links">
-          <a class="vis" id="start" href="javascript:startVis()">PLAY VISUALISATION</a>
+          <a class="vis" id="start" href="javascript:startVis(300)">PLAY VISUALISATION</a>
           <a class="vis" id="restart" href="javascript:restartVis()">CONTINUE</a>
           <a class="vis" id="pause" href="javascript:pauseVis()">PAUSE</a>
           <a class="vis" id="faster" href="javascript:faster()">FASTER</a>
@@ -1355,13 +1355,12 @@
 //          $(".game").hide();
         }
 
-        function startVis(){
+        function startVis(speed){
           currentGame=0;
           for(i=0;i<teamsData.length;i++){
               teamsData[i][1]=0;
               $("#team"+i).text(teamsData[i][0]);
           }
-          speed = 300;
           $("#start").hide();
           $("#faster").css('display', 'inline-block');
           $("#pause").css('display', 'inline-block');
@@ -1488,6 +1487,8 @@
 
         lastMatch();
         drawChart();
+        startVis(0);
+        
 
 
 
