new content and tablet colours

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
 			<h2>CSS</h2>
 			<span class="summary"><span><p>A collection of front-end code experiments on CodePen and mainly focusing on CSS Grid.</p></span></span>
 			<li>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
+				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
+				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/pen/PBPrex" target="isoEcom"><h3>Isometric eCommerce Grid</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/PBPrex" target="isoEcom"><img src="images/thumbs/isoEcom-300.jpg" /></a>
+				<p>Builds on some of my previous examples with isometric CSS Grids to make an eCommerce product grid with a 3D effect. The products have a smalll hover effect on mouse over.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/pen/GGVLov" target="overrated"><h3>Layout is overrated</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/GGVLov" target="overrated"><img src="images/thumbs/overrated-300.jpg" /></a>
+				<p>Just a fun project playing around with the <a href="http://brm.io/matter-js/" target="_blank">matter.js</a> library to make an animated layout that looks like that draw in your kitchen with all those things you haven"t thrown away because they will be useful one day.</p>
+				<p><a href="https://twitter.com/shiffman" target="_blank">Daniel Shiffman</a>'s excellent <a href="https://www.youtube.com/watch?v=urR596FsU68" target="_blank">video tutorials</a> got me started.</p>
+			</li>
+			<li>
 				<a href="https://codepen.io/andybarefoot/pen/ypPgod" target="stackedCubes"><h3>Stacked Cubes</h3></a>
 				<a href="https://codepen.io/andybarefoot/pen/ypPgod" target="stackedCubes"><img src="images/thumbs/stackedCubes-300.jpg" /></a>
 				<p>A CodePen experimenting with displaying many rows of content in an innovative way.</p>
