--- a/index.html
+++ b/index.html
@@ -28,8 +28,57 @@
 			<h2>CSS</h2>
 			<span class="summary"><span><p>A collection of front-end code experiments on CodePen and mainly focusing on CSS Grid.</p></span></span>
 			<li>
+				<a href="https://codepen.io/andybarefoot/full/wvKJweJ" target="layeredBG"><h3>Layered Background eCommerce</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/wvKJweJ" target="layeredBG"><img src="images/thumbs/layeredBG-400.jpg" /></a>
+				<p>Using a repeating SVG background image on pseudo elements to create a layered background so that other elements can appear to be "poking up" between them.</p>
+				<p>Built on CodePen with the usual CSS Grid techniques I'd used in previous pens to make sure the design is responsive.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/full/oNjxYYG" target="bookshelf"><h3>Diamond Grid Bookshelf</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/oNjxYYG" target="bookshelf"><img src="images/thumbs/bookshelf-400.jpg" /></a>
+				<p>Another CSS Grid product layout. This time with books, clip-path, conic-gradient, shadows and hover effects.</p>
+				<p>Conic-gradient is used to create the 2 colour effect on the pseudo elements before and after the books. To ensure cross-browser compatability I used the incredible <a href="https://twitter.com/LeaVerou" target="_blank">Lea Verou's</a> <a href="https://leaverou.github.io/conic-gradient/" target="_blank">polyfill</a>.</p>
+				<p>Colour palette inspriration from the always stunning <a href="https://dribbble.com/shots/6509733-Bibelot-pt-II" target="_blank">Jay Fletcher</a>.
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/full/GRKyjPz" target="scrollExpand"><h3>Expanding Scroll Experiment</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/GRKyjPz" target="scrollExpand"><img src="images/thumbs/scrollExpand-400.png" /></a>
+				<p>An experiment expanding the height of a CSS Grid with the scroll of the page. The animation of the expanding and appearing elements is driven purely by the overall height attribute.</p>
+				<p>As the overall height changes, the order in which the grid rows expand depend on whether individual row heights are set using absolute pixel values, fractional units or minmax pixel values.</p>
+			</li>
+<!-- 			<li>
 				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
 				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
+				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
+				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
+				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
+				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
+				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
+				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
+				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
+				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			</li>
+			<li>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
+				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
+				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
+				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			</li>
+ -->			<li>
+				<a href="https://codepen.io/andybarefoot/full/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
 				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
 				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
 			</li>
