new homepage updates

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 				<a href="https://codepen.io/andybarefoot/full/oNjxYYG" target="bookshelf"><h3>Diamond Grid Bookshelf</h3></a>
 				<a href="https://codepen.io/andybarefoot/full/oNjxYYG" target="bookshelf"><img src="images/thumbs/bookshelf-400.jpg" /></a>
 				<p>Another CSS Grid product layout. This time with books, clip-path, conic-gradient, shadows and hover effects.</p>
-				<p>Conic-gradient is used to create the 2 colour effect on the pseudo elements before and after the books. To ensure cross-browser compatability I used the incredible <a href="https://twitter.com/LeaVerou" target="_blank">Lea Verou's</a> <a href="https://leaverou.github.io/conic-gradient/" target="_blank">polyfill</a>.</p>
-				<p>Colour palette inspriration from the always stunning <a href="https://dribbble.com/shots/6509733-Bibelot-pt-II" target="_blank">Jay Fletcher</a>.
+				<p>Conic-gradient is used to create the 2 colour effect on the pseudo elements before and after the books. To ensure cross-browser compatibility I used the incredible <a href="https://twitter.com/LeaVerou" target="_blank">Lea Verou's</a> <a href="https://leaverou.github.io/conic-gradient/" target="_blank">polyfill</a>.</p>
+				<p>Colour palette inspiration from the always stunning <a href="https://dribbble.com/shots/6509733-Bibelot-pt-II" target="_blank">Jay Fletcher</a>.
 			</li>
 			<li>
 				<a href="https://codepen.io/andybarefoot/full/GRKyjPz" target="scrollExpand"><h3>Expanding Scroll Experiment</h3></a>
@@ -46,37 +46,33 @@
 				<p>An experiment expanding the height of a CSS Grid with the scroll of the page. The animation of the expanding and appearing elements is driven purely by the overall height attribute.</p>
 				<p>As the overall height changes, the order in which the grid rows expand depend on whether individual row heights are set using absolute pixel values, fractional units or minmax pixel values.</p>
 			</li>
-<!-- 			<li>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
-				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
-				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+			<li>
+				<a href="https://codepen.io/andybarefoot/full/rXqMQe" target="perspective"><h3>eCommerce Perspective grid</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/rXqMQe" target="perspective"><img src="images/thumbs/perspective-400.jpg" /></a>
+				<p>A "masonry" style eCommerce grid where the background, photo and product details/border sit on 3 different levels. The levels move with the mouse and align for a particular product as the user moves the mouse over it.</p>
+				<p>Uses the <a href="https://github.com/robb0wen/tornis" target="tornis">Tornis</a> JavaScript library to track the scroll of the page and attributes of the page.</p>
 			</li>
 			<li>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
-				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
-				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+				<a href="https://codepen.io/andybarefoot/full/Gwggor" target="playingCards"><h3>Playing Card Grid Layout</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/Gwggor" target="playingCards"><img src="images/thumbs/playingCards-400.jpg" /></a>
+				<p>A responsive CSS Grid eCommerce layout showing sneakers from both sides. Mouse over effect rotates card and zooms in on product.</p>
 			</li>
 			<li>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
-				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
-				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+				<a href="https://codepen.io/andybarefoot/full/LXYyzd" target="tshirtsCard"><h3>T-shirt Card Layout</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/LXYyzd" target="tshirtsCard"><img src="images/thumbs/tshirtsCard-400.jpg" /></a>
+				<p> A layout of interlocking cards using skew and rotate on a CSS Grid to ensure a responsive display. A hover effect brings the selected product to the front and zooms in on the design.</p>
 			</li>
 			<li>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
-				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
-				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+				<a href="https://codepen.io/andybarefoot/full/XxqveV" target="sneakerSkew"><h3>Skewed Sneaker Grid</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/XxqveV" target="sneakerSkew"><img src="images/thumbs/sneakerSkew-400.jpg" /></a>
+				<p>A skewed eCommerce layout using CSS Grid for responsive arangement of sneakers. Mouse over effect on product and details.</p>
 			</li>
 			<li>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
-				<a href="https://codepen.io/andybarefoot/pen/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
-				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
-				<p>The first letter of the text is hidden and a large image version created using the path definition from the svg font file. This allows the letter, font and sizing and placement of the drop cap to all be generated dynamically. I also added a choice of SVG filter effects that can be added to the first letter.</p>
+				<a href="https://codepen.io/andybarefoot/full/VwZjVma" target="tesselate"><h3>Tessellated Product Layout</h3></a>
+				<a href="https://codepen.io/andybarefoot/full/VwZjVma" target="tesselate"><img src="images/thumbs/tesselate-400.jpg" /></a>
+				<p>Responsive CSS Grid layout with tessellated background. Mouse over effect changes background colour and zooms product.</p>
 			</li>
- -->			<li>
+			<li>
 				<a href="https://codepen.io/andybarefoot/full/WKPZrV" target="dropCaps"><h3>Dynamic Drop Caps</h3></a>
 				<a href="https://codepen.io/andybarefoot/full/WKPZrV" target="dropCaps"><img src="images/thumbs/dropCaps-300.jpg" /></a>
 				<p>Dynamically generated large "drop caps" using "shape-outside" to wrap text round a large first letter.</p>
